[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# bin で実行することもできるし、 bin 直下において、--bin で実行でもOK
# https://rs.nkmk.me/rust-cargo-src-bin/
[[bin]]
name = "abc-336-a"
path = "src/abc/336/A/main.rs"
[[bin]]
name = "abc-336-b"
path = "src/abc/336/B/main.rs"
[[bin]]
name = "abc-336-c"
path = "src/abc/336/C/main.rs"
[[bin]]
name = "abc-336-d"
path = "src/abc/336/D/main.rs"
